--- a/test2.htm
+++ b/test2.htm
@@ -1,114 +1,8 @@
-<!DOCTYPE html>
-<html>
-<body bgcolor="lightblue" 	style="margin:0;">
-<center>
-<script src="processing.js"></script>
-<script type="application/processing">
-
-int orbNumber = 30;
-
-void setup(){
-	h=[];
-	float t;
-	size(600,600);
-	frameRate(60);
-	//assign starting variables for floating objects
-	for(int a = 0; a < orbNumber; a++){
-		h[a] = new orb(0,   200, 1, 64); 
-		h[a].xpos = random(1,width);
-		h[a].ypos = a * 100;
-		h[a].red = random(128,255);
-		h[a].blue = random(128,255);
-		h[a].green = random(128,255);
-		}
-}
-
-void draw() { 
-	background(200,200,200,0);
-	//call the update method from the orb class to calculate postion and display graphic
-	for(int a = 0; a < orbNumber; a++)h[a].update(); 
-
-	//number the graphics
-	textFont("Arial", 22);
-	fill(255,255,255,80);
-	for(int a = 0; a < orbNumber; a++)text(a,h[a].xpos-6,h[a].ypos+6); 
+<head>
 	
-	//for each graphic, check distance for each other graphic and change 
-	//movement direction upon collisions
-	for(int a = 0; a < orbNumber; a++)for(int b = a+1; b < (orbNumber); b++){	
-			if(circleCollision(h[a],h[b])){
-				t=h[a].xOffset;
-				h[a].xOffset=h[b].xOffset;
-				h[b].xOffset = t;
-				t=h[a].yOffset;
-				h[a].yOffset=h[b].yOffset;
-				h[b].yOffset = t;
-				h[a].update;
-				h[b].update;
-				h[a].imperfectEdge()
-				h[b].imperfectEdge()
-			}
-		}
-} 
-
-function circleCollision(circle1,circle2){
-	var x1 = circle1.xpos;
-	var x2 = circle2.xpos;
-	var y1 = circle1.ypos;
-	var y2 = circle2.ypos;
-	var distance = sqrt( (x1-x2) * (x1-x2) + (y1-y2) * (y1-y2) );
-	var widths = circle1.radius + circle2.radius;
-	var t = false;
-	if(distance<widths)t = true;
-	//text("distance = " + distance,20,20);
-	return t;
-	}
-
-
-class orb { 
-  float xpos, ypos, speed, diameter, xOffset, yOffset, radius; 
-  int red, blue, green;
-  orb (float x, float y, float s, float size) {  
-    xpos = x;
-	ypos = y; 
-	diameter = size;
-    xOffset = s;
-    yOffset = s; 
-	radius = .5 * diameter;
-	} 
-
-   
-  void update() { 
-    ypos += yOffset; 
-    xpos += xOffset; 
-    if(yOffset<0&&ypos<0+radius){
-		yOffset=-yOffset;
-		imperfectEdge();
-		}
-	if(yOffset>0&&ypos>height-radius){
-		yOffset=-yOffset;
-		imperfectEdge();
-		}
-	if(xOffset<0&&xpos<0+radius){
-		xOffset=-xOffset;
-		imperfectEdge();
-		}
-	if(xOffset>0&&xpos>width-radius){
-		xOffset=-xOffset;
-		imperfectEdge();
-		}
-	noStroke();
-	for(a = diameter; a > 0; a-=5){
-		fill(red-a,blue-a,green-a);
-		ellipse(xpos, ypos, a, a); 
-		}
-  } 
-  void imperfectEdge(){
-	xOffset=xOffset+random(-.1,.1);
-	yOffset=yOffset+random(-.1,.1);
-  }
-
-}
-</script><canvas></canvas> 
-</body>
-</html>
+<title>  my hello page</title>	
+</head>
+<font size="7">
+	hello my friend, hello
+	
+</font>
